[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Witch.gd" type="Script" id=2]
[ext_resource path="res://assets/sheets/witch/enemy_flyfree.png" type="Texture" id=3]
[ext_resource path="res://assets/sheets/witch/enemy_flycat.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "FlyLeft_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "FlyLeft",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 19.0

[sub_resource type="CircleShape2D" id=6]
radius = 90.0

[sub_resource type="CircleShape2D" id=7]
radius = 33.0

[node name="Witch" type="KinematicBody2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 4 )
animation = "FlyLeft"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 1 )
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.125002, 0 )
scale = Vector2( 2.9875, 2.65 )

[node name="CatChaseDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatChaseDetectionZone"]
shape = SubResource( 6 )

[node name="CatGetDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatGetDetection"]
position = Vector2( 0, 3 )
shape = SubResource( 7 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="CatChaseDetectionZone" to="." method="_on_CatChaseDetectionZone_body_entered"]
[connection signal="body_exited" from="CatChaseDetectionZone" to="." method="_on_CatChaseDetectionZone_body_exited"]
[connection signal="area_entered" from="CatGetDetection" to="." method="_on_CatGetDetection_area_entered"]
[connection signal="area_exited" from="CatGetDetection" to="." method="_on_CatGetDetection_area_exited"]
[connection signal="body_entered" from="CatGetDetection" to="." method="_on_CatGetDetection_body_entered"]
